--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <ul class="footer-left-bar">
+    <ul class="footer-left-bar d-none d-md-block">
         <li>
             <a href="#" target='_blank'>
                 <i class="fab fa-github"></i>
@@ -21,7 +21,7 @@
             </a>
         </li>
     </ul>
-    <div class="footer-right-bar">
+    <div class="footer-right-bar d-none d-md-block">
         <a href="#" target='_blank'> joseandreshernandezross@gmail.com </a>
     </div>
 
