--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="section-box">
             <div class="about-title mb-4">
-                <h3 class="contact-pre-title">05. Y... ¿Ahora?</h3>
-                <h4 class="e-font contact-title">
+                <h3 class="contact-pre-title big-subtitle">05. Y... ¿Ahora?</h3>
+                <h4 class="e-font contact-title big-title">
                     ¡Saludame!
                 </h4>
             </div>
