--- a/src/app/components/home/more-proyects/more-proyects.component.html
+++ b/src/app/components/home/more-proyects/more-proyects.component.html
@@ -9,9 +9,9 @@
             </div>
             <div class="jobs-container mt-5">
                 <div class="row p-0">
-                    <div class="col-4 proyect-col">
+                    <div class="col-12 col-md-6 col-lg-4 proyect-col">
                         <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
+                            <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
@@ -31,9 +31,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 proyect-col">
+                    <div class="col-12 col-md-6 col-lg-4 proyect-col">
                         <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
+                            <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
@@ -53,9 +53,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 proyect-col">
+                    <div class="col-12 col-md-6 col-lg-4 proyect-col">
                         <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
+                            <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
@@ -75,11 +75,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row p-0">
-                    <div class="col-4 proyect-col">
+                    <div class="col-12 col-md-6 col-lg-4 proyect-col">
                         <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
+                            <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
@@ -99,9 +97,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 proyect-col">
+                    <div class="col-12 col-md-6 col-lg-4 proyect-col">
                         <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
+                            <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
@@ -121,77 +119,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 proyect-col">
+                    <div class="col-12 col-md-6 col-lg-4 proyect-col">
                         <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
-                                <div class="col-6 p-0">
-                                    <img src='assets/icons/folder.svg' width="40">
-                                </div>
-                                <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
-                                </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
-                            </div>
-                            <div>
-                                <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row p-0">
-                    <div class="col-4 proyect-col">
-                        <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
-                                <div class="col-6 p-0">
-                                    <img src='assets/icons/folder.svg' width="40">
-                                </div>
-                                <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
-                                </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
-                            </div>
-                            <div>
-                                <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4 proyect-col">
-                        <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
-                                <div class="col-6 p-0">
-                                    <img src='assets/icons/folder.svg' width="40">
-                                </div>
-                                <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
-                                </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
-                            </div>
-                            <div>
-                                <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4 proyect-col">
-                        <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
+                            <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
@@ -212,145 +142,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="row p-0">
-                    <div class="col-4 proyect-col">
-                        <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
-                                <div class="col-6 p-0">
-                                    <img src='assets/icons/folder.svg' width="40">
-                                </div>
-                                <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
-                                </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
-                            </div>
-                            <div>
-                                <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4 proyect-col">
-                        <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
-                                <div class="col-6 p-0">
-                                    <img src='assets/icons/folder.svg' width="40">
-                                </div>
-                                <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
-                                </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
-                            </div>
-                            <div>
-                                <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4 proyect-col">
-                        <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
-                                <div class="col-6 p-0">
-                                    <img src='assets/icons/folder.svg' width="40">
-                                </div>
-                                <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
-                                </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
-                            </div>
-                            <div>
-                                <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row p-0">
-                    <div class="col-4 proyect-col">
-                        <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
-                                <div class="col-6 p-0">
-                                    <img src='assets/icons/folder.svg' width="40">
-                                </div>
-                                <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
-                                </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
-                            </div>
-                            <div>
-                                <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4 proyect-col">
-                        <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
-                                <div class="col-6 p-0">
-                                    <img src='assets/icons/folder.svg' width="40">
-                                </div>
-                                <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
-                                </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
-                            </div>
-                            <div>
-                                <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4 proyect-col">
-                        <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0 mb-4">
-                                <div class="col-6 p-0">
-                                    <img src='assets/icons/folder.svg' width="40">
-                                </div>
-                                <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
-                                </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
-                            </div>
-                            <div>
-                                <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
             <div class="w-100 text-center">
-                <button class="show-works-btn">Ver todo</button>
+                <a [routerLink]="'/proyectos'">
+                    <button class="show-works-btn">Ver todo</button>
+                </a>
             </div>
         </div>
     </div>
