--- a/src/app/components/archive/archive.component.css
+++ b/src/app/components/archive/archive.component.css
@@ -1,5 +1,4 @@
 .section.archive{
-    padding: 0 150px;
     margin: 0 auto;
     width: 100%;
     max-width: 1600px;
@@ -45,6 +44,13 @@
     transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
     transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s, opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0s, transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
 }
+
+.archive-table-container table tbody td{
+    cursor: default;
+    line-height: 1.5;
+    padding: 12.9px 20px;
+}
+
 .proyect-date{
     color: #64ffda;
     font-family: SF Mono,Fira Code,Fira Mono,Roboto Mono,Lucida Console,Monaco,monospace;
@@ -95,4 +101,10 @@
 
 .archive-table-container table tbody tr:hover, .archive-table-container table tbody tr:focus {
     background-color: #172a45;
+}
+
+@media (max-width: 768px){
+    .proyect-company, .proyect-skills, .hide-on-mobile{
+        display: none;
+    }
 }
