--- a/src/app/components/archive/archive.component.html
+++ b/src/app/components/archive/archive.component.html
@@ -1,8 +1,8 @@
 <section class="section archive">
     <div class="container">
         <div class="archive-title">
-            <h1>Proyectos</h1>
-            <p class="archive-subtitle">A big list of things I’ve worked on</p>
+            <h1 class="big-title">Proyectos</h1>
+            <p class="archive-subtitle big-subtitle">Una lista mas completa</p>
         </div>
         <div class="archive-table-container">
             <table class="archive__StyledTable-lXDeB haZMKe">
