--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -7,7 +7,7 @@
                 </h3>
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <div class="about-description">
                         <p>
                             ¡Hola! Soy José Hernández, web developer en Monagas, VE.
@@ -32,7 +32,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-6 text-center">
+                <div class="col-12 col-md-6 mt-4 mt-md-0 text-center">
                     <div class="about-img-container">
                         <img class="rounded" width="300" height="300" src="assets/images/me.jpg" alt="José Andrés">
                     </div>
