--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -3,15 +3,17 @@
         <div class="section-box">
             <div class="about-title">
                 <h3 class="e-font section-title">
-                    <span class='code-font n-section-title'>03.</span> Algunos proyectos que he realizado
+                    <span class='code-font n-section-title'>03.</span> Mis proyectos
                 </h3>
             </div>
             
             <div class="d-flex proyect-container">
-                <div>
-                    <img src="https://dummyimage.com/600x360/000/fff" alt="">
+                <div class="img-feature-proyect-container">
+                    <div class="img-feature-proyect-box">
+                        <img class='img-feature-proyect' src="https://dummyimage.com/600x360/000/fff" alt="">
+                    </div>
                 </div>
-                <div class="proyect-info-right h-100">
+                <div class="proyect-info-right h-100" style="background-image: url('https://dummyimage.com/600x360/000/fff');">
                     <div class="proyect-box">
                             <h4 class="text-right feature-proyect">Proyecto Destacado</h4>
                             <h5 class="text-right proyect-name">Proyeto 1</h5>
@@ -33,7 +35,7 @@
             </div>
             
             <div class="d-flex proyect-container">
-                <div class="proyect-info-left h-100">
+                <div class="proyect-info-left h-100" style="background-image: url('https://dummyimage.com/600x360/000/fff');">
                     <div class="proyect-box">
                             <h4 class="text-left feature-proyect">Proyecto Destacado</h4>
                             <h5 class="text-left proyect-name">Proyeto 1</h5>
@@ -52,16 +54,20 @@
                             </div>
                     </div>
                 </div>
-                <div>
-                    <img src="https://dummyimage.com/600x360/000/fff" alt="">
+                <div class="img-feature-proyect-container">
+                    <div class="img-feature-proyect-box">
+                        <img class='img-feature-proyect' src="https://dummyimage.com/600x360/000/fff" alt="">
+                    </div>
                 </div>
             </div>
             
             <div class="d-flex proyect-container">
-                <div>
-                    <img src="https://dummyimage.com/600x360/000/fff" alt="">
+                <div class="img-feature-proyect-container">
+                    <div class="img-feature-proyect-box">
+                        <img class='img-feature-proyect' src="https://dummyimage.com/600x360/000/fff" alt="">
+                    </div>
                 </div>
-                <div class="proyect-info-right h-100">
+                <div class="proyect-info-right h-100" style="background-image: url('https://dummyimage.com/600x360/000/fff');">
                     <div class="proyect-box">
                             <h4 class="text-right feature-proyect">Proyecto Destacado</h4>
                             <h5 class="text-right proyect-name">Proyeto 1</h5>
