--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -1,49 +1,49 @@
-<nav class="navbar main-navbar">
+<nav class="navbar main-navbar on-top" [class.nav-shadow]='this.pageYPosition>0'>
     <a class="navbar-brand text-light" [routerLink]="'inicio'">Jose Andres</a>
     <ul ngbNav #nav="ngbNav">
         <li ngbNavItem>
-            <a ngbNavLink><span class='nav-number'>01.</span> Acerca de mi</a>
+            <a ngbNavLink (click)='scroll("about")'><span class='nav-number'>01.</span> Acerca de mi</a>
             <ng-template ngbNavContent>First content</ng-template>
         </li>
         <li ngbNavItem>
-            <a ngbNavLink><span class='nav-number'>02.</span> Experiencia</a>
+            <a ngbNavLink (click)='scroll("jobs")'><span class='nav-number'>02.</span> Experiencia</a>
             <ng-template ngbNavContent>Second content</ng-template>
         </li>
         <li ngbNavItem>
-            <a ngbNavLink><span class='nav-number'>03.</span> Trabajos</a>
+            <a ngbNavLink (click)='scroll("proyects")'><span class='nav-number'>03.</span> Trabajos</a>
             <ng-template ngbNavContent>Second content</ng-template>
         </li>
         <li ngbNavItem>
-            <a ngbNavLink><span class='nav-number'>04.</span> Contacto</a>
+            <a ngbNavLink (click)='scroll("contact")'><span class='nav-number'>04.</span> Contacto</a>
             <ng-template ngbNavContent>Second content</ng-template>
         </li>
     </ul>
     <div class="menu-wrapper">
         <div [class.animate]='responsiveMenuVisible' (click)='responsiveMenuVisible = !responsiveMenuVisible' class="hamburger-menu"></div>
     </div>
-    <div class="menu-responsive">
-      <aside [class.aside-show]='responsiveMenuVisible'>
+    <div class="menu-responsive" [ngStyle]="{'pointer-events': !responsiveMenuVisible ? 'none' : '' }">
+      <aside [class.aside-show]='responsiveMenuVisible' [class.nav-shadow]='this.pageYPosition>0' class="on-top">
           <nav >
               <ol>
                   <li>
-                    <a href="/#about">
+                    <a (click)='scroll("about")'>
                       <span >01.</span>
                       Acerca de mi
                     </a>
                   </li>
                   <li>
-                    <a href="/#jobs">
+                    <a (click)='scroll("jobs")'>
                       <span >01.</span>
                       Experiencia</a>
                   </li>
                   <li>
-                    <a href="/#projects">
+                    <a (click)='scroll("proyects")'>
                       <span >01.</span>
                       Proyectos
                     </a>
                   </li>
                   <li>
-                    <a href="/#contact">
+                    <a (click)='scroll("contact")'>
                       <span >01.</span>
                       Contacto</a>
                   </li>
