--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -1,4 +1,4 @@
-<section class="section about">
+<section class="section about" id='about'>
     <div class="container">
         <div class="section-box">
             <div class="about-title">
