--- a/src/app/components/home/jobs/jobs.component.html
+++ b/src/app/components/home/jobs/jobs.component.html
@@ -1,4 +1,4 @@
-<section class="section about jobs">
+<section class="section about jobs" id='jobs'>
     <div class="container">
         <div class="section-box">
             <div class="about-title mb-5">
