--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="section contact">
+<section class="section contact" id='contact'>
     <div class="container">
         <div class="section-box">
             <div class="about-title mb-4">
